# sqlflask2

./: .dockerignore  .gitignore  Dockerfile  README.rst  app.db  config.py  entrypoint.sh  pyproject.toml  requirements.txt
app/: views.py
