[project]
name = "sqlflask"
version = "0.1.1"
description = "A minimal Flask + SQLite + HTMX project"
dependencies = [
  "flask>=2.3.3",
  "gunicorn>=23.0.0",
  "python-dotenv>=1.1.0",
  "sentry-sdk[flask]>=2.28.0",
  "sqlite-utils>=3.38",
  "pytest>=7.4.0",
  "pytest-flask>=1.3.0",
  "pytest-cov>=6.1.1",
  "coverage>=7.8.2",
  "shiny>=0.3.0",
  "polars>=1.30.0",
  "flask-htmx>=0.4.0",
  "flask-appbuilder>=4.7.0",
  "pre-commit>=3.4.0",
]
requires-python = ">=3.12"
